error-message cutout

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
   <div>
     <h4 id="error-message" class="text-danger">Something went to wrong,please try later!</h4>
   </div>
+  <div>
+    <h4 id="error-message2" class="text-warning text-center my-3  mx-auto container bg-danger w-50"></h4>
+  </div>
+
 
 
 
