some style makeup

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <h2 class="text-center my-3 ">📲 The <span class="text-warning">Phone</span> Inquiry 🔎</h2>
+  <h2 class="text-center my-4 ">📲 The <span class="text-warning">Phone</span> Inquiry 🔎</h2>
   <div class="d-flex container  w-50 mx-auto">
 
     <!-- phone search area -->
@@ -38,6 +38,9 @@
   </div>
   <div>
     <h4 id="error-message2" class="text-warning text-center my-3  mx-auto container bg-danger w-50"></h4>
+  </div>
+  <div>
+    <h4 id="release"></h4>
   </div>
 
 
